# Crypto_Exchange

./: CMakeLists.txt  LICENSE  MerkelMain.cpp  MerkelMain.h  README.md  main.cpp  test.csv
CSVReader/: CSVReader.cpp  CSVReader.h
CommandLine/: CommandLine.cpp  CommandLine.h
OrderBook/: OrderBook.cpp  OrderBook.h
OrderBookEntry/: OrderBookEntry.cpp  OrderBookEntry.h
Tokeniser/: Tokeniser.cpp  Tokeniser.h
Wallet/: Wallet.cpp  Wallet.h
_arithmetics/EMA_Optimiser/: EMA_Optimiser.cpp  EMA_Optimiser.h
